# minty_smart

./: .gitignore  README.md
frontend/: .gitignore  (+6 more)
minty-backand/: .env  Cargo.toml  diesel.toml  examples.sql  makefile
minty-backand/migrations/2025-04-12-140047_token_mint/: down.sql  up.sql
minty-backand/migrations/2025-04-28-182027_peer_to_peer/: down.sql  up.sql
minty-backand/src/: client.rs  config.rs  db.rs  entrypoint.rs  error.rs  instructions.rs  lib.rs  main.rs  model.rs  schema.rs  service.rs
minty-backand/src/client/: router.rs  socket_entry_point.rs
minty-backand/src/client/dto/: peer_to_peer.rs  supplied_token.rs
minty-backand/src/client/dto/peer_to_peer/: create_active_order.rs  get_peer_to_peer_list.rs
minty-backand/src/client/dto/supplied_token/: create_supplied_token_dto.rs  get_supplied_token_list_dto.rs
minty-backand/src/client/router/: peer_to_peer.rs  supplied_token.rs  user.rs
minty-backand/src/client/router/peer_to_peer/: create_active_order.rs  create_peer_to_peer.rs  get_peer_to_peer_list.rs
minty-backand/src/client/router/supplied_token/: create_supplied_token_handler.rs  (+1 more)
minty-backand/src/db/: connection_pool.rs  model.rs  peer_to_peer.rs  supplied_token.rs
minty-backand/src/db/model/: supplied_token.rs
minty-backand/src/db/peer_to_peer/: create_merchant_active_order.rs  create_peer_to_peer.rs  get_peer_to_peer_list.rs  model.rs
minty-backand/src/db/supplied_token/: create_supplied_token_query.rs  get_supplied_token_query.rs  model.rs
minty-backand/src/dto/: supplied_token.rs
minty-backand/src/instructions/: supplied_token.rs
minty-backand/src/model/: token_chank.rs
minty-backand/src/service/: peer_to_peer.rs  supplied_token.rs
minty-backand/src/service/peer_to_peer/: create_active_order.rs
tg_bot/: .env  Cargo.toml
tg_bot/src/: bot_state.rs  config.rs  entrypoint.rs  instructions.rs  main.rs  menu.rs  menu_commands.rs  messages.rs  redis.rs
tg_bot/src/db/: profile.rs
tg_bot/src/db/profile/: create_user.rs
tg_bot/src/instructions/: register_instruction.rs  register_request_email.rs  register_request_email_code.rs  start_instruction.rs
tg_bot/src/instructions/start_instruction/: initialize_registration_process.rs  initialize_start.rs  process_check_email.rs
tg_bot/src/mailer/: smtp_client.rs
tg_bot_tests/: Cargo.toml  diesel.toml
tg_bot_tests/src/: commands_listener.rs  config.rs  db.rs  entrypoint.rs  main.rs  menu.rs  messages.rs  schema.rs  state.rs
tg_bot_tests/src/db/: connection_pool.rs
tg_bot_tests/src/db/profile/: get_user_by_telegram_id.rs  model.rs
tg_bot_tests/src/instructions/: register_instruction.rs  register_request_email.rs  start_instruction.rs
(+212 files in other folders)
